--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,3 +84,100 @@ header {
 
 
 
+#banner {
+    width: 100vw;
+    height: calc(100vh - 100px);
+}
+
+.banner {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    flex: 1;
+    padding: 30px;
+}
+
+
+.banner-esquerda {
+    flex: 1;
+}
+
+.banner-esquerda h1{
+    font-size: 75px;
+    margin: 10px 0px;
+    font-weight: 900;
+}
+
+.banner-esquerda h2 {
+    color: var(--terciary);
+    text-transform: uppercase;
+    margin: 20px 0;
+}
+
+.banner-esquerda p{
+    font-size: 20px;
+    max-width: 550px;
+    line-height: 30px;
+}
+
+.banner-esquerda span {
+    font-size: 35px;
+    animation: 3s ease-in 1s infinite reverse both running bye;
+    display: inline-block;
+}
+
+.banner-esquerda a{
+    padding: 15px 30px;
+    border-radius: 10px;
+    display: inline-block;
+    background: var(--primary);
+    align-items: center;
+    margin-top: 30px;
+    text-decoration: none;
+    color: var(--second);
+    font-size: 20px;
+    font-weight: 900;
+    transition: all 0.5s ease-in-out 0s;
+}
+
+.banner-esquerda a:hover {
+    transform: scale(110%);
+}
+
+.banner-direita {
+    flex: 1;
+    display: flex;
+    justify-content: end;
+}   
+
+.icone-rolagem {
+    display: flex;
+    margin-top: -70px;
+    justify-content: center;
+}
+
+
+@keyframes bye {
+    0% {transform: rotate(0deg);}
+    25% {transform: rotate(40deg);}
+    50% {transform: rotate(0deg);}
+    75% {transform: rotate(40deg);}
+    100% {transform: rotate(0deg);}
+}
+
+
+#teste {
+    width: 100vw;
+    height: 100vh;
+}
+
+
+
+
+
+
+
+
+
