--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,3 +169,56 @@ header {
 }
 
 
+/* Section Sobre mim */
+
+
+#sobre-mim {
+    width: 100vw;
+    background: var(--bg-second);
+    padding: 60px;
+}
+
+.sobre-mim {
+    display: flex;
+    flex: 1;
+}
+
+.sobre-mim-esquerda {
+    display: flex;
+    justify-content: center;
+    flex: 1;
+}
+
+.sobre-mim-esquerda img{
+    box-shadow: -14px 13px 0px 3px #34FF7A;
+    border-radius: 30px;
+}
+
+.sobre-mim-direita {
+    flex: 1;
+}
+
+.sobre-mim-direita p:first-child{
+    font-size: 20px;
+    color: var(--terciary);
+}
+
+.sobre-mim-direita p:first-child:after{
+    content: "";
+    display: inline-block;
+    width: 40px;
+    height: 5px;
+    background: var(--terciary);
+    margin: 4px 10px;
+}
+
+.sobre-mim-direita p{
+    font-size: 20px;
+    max-width: 500px;
+    line-height: 30px;
+}
+
+.sobre-mim-direita h1{
+    font-size: 45px;
+    margin: 20px 0px;
+}
