--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,7 @@ header {
     display: inline-block;
 }
 
-.banner-esquerda a{
+.buttom{
     padding: 15px 30px;
     border-radius: 10px;
     display: inline-block;
@@ -139,11 +139,11 @@ header {
     text-decoration: none;
     color: var(--second);
     font-size: 20px;
-    font-weight: 900;
+    font-weight: 500;
     transition: all 0.5s ease-in-out 0s;
 }
 
-.banner-esquerda a:hover {
+.buttom:hover {
     transform: scale(110%);
 }
 
@@ -175,7 +175,7 @@ header {
 #sobre-mim {
     width: 100vw;
     background: var(--bg-second);
-    padding: 60px;
+    padding: 200px 10px;
 }
 
 .sobre-mim {
@@ -221,4 +221,12 @@ header {
 .sobre-mim-direita h1{
     font-size: 45px;
     margin: 20px 0px;
+}
+
+.sobre-mim-direita a{
+    display: inline-block;
+    text-decoration: none;
+    color: var(--second);
+    margin-top: 30px;
+    font-size: 20px;
 }
