--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,11 +18,12 @@
 
 html {
     scroll-behavior: smooth;
+    font-size: 10px;
 }
 
 body {
     font-family: 'Roboto', sans-serif;
-    font-size: 13px;
+    font-size: 1.2rem;
     overflow-x: hidden;
     background-color: var(--bg-primary);
     color: var(--second);
@@ -30,7 +31,7 @@ body {
 
 header {
     width: 100vw;
-    height: 100px;
+    min-height: 100px;
     padding-top: 40px;
 }
 
@@ -52,7 +53,7 @@ header {
     margin-right: 50px;
     text-decoration: none;
     color: var(--second);
-    font-size: 18px;
+    font-size: 1.8rem;
     font-weight: 500;
     transition: color 0.2s ease-in-out 0s;
 }
@@ -75,13 +76,27 @@ header {
 
 
 .menu i {
-    font-size: 35px;
+    font-size: 3.5rem;
     transition: color 0.2s ease-in-out 0s;
 }
 
 .menu i:hover {
-    font-size: 35px;
+    font-size: 3.5rem;
     color: var(--terciary);
+}
+
+.menu_mobile {
+    display: none;
+    width: 40px;
+    height: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    margin-right: 20px;
+}
+
+.mm_line {
+    height: 3px;
+    background-color: var(--terciary);
 }
 
 
@@ -109,7 +124,7 @@ header {
 }
 
 .banner-esquerda h1{
-    font-size: 75px;
+    font-size: 7.5rem;
     margin: 10px 0px;
     font-weight: 900;
 }
@@ -121,13 +136,13 @@ header {
 }
 
 .banner-esquerda p{
-    font-size: 20px;
+    font-size: 2rem;
     max-width: 550px;
     line-height: 30px;
 }
 
 .banner-esquerda span {
-    font-size: 35px;
+    font-size: 3.5rem;
     animation: 3s ease-in 1s infinite reverse both running bye;
     display: inline-block;
 }
@@ -141,7 +156,7 @@ header {
     margin-top: 30px;
     text-decoration: none;
     color: var(--second);
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 500;
     transition: all 0.5s ease-in-out 0s;
 }
@@ -202,7 +217,7 @@ header {
 }
 
 .titulo p:first-child{
-    font-size: 20px;
+    font-size: 2rem;
     color: var(--terciary);
 }
 
@@ -216,13 +231,13 @@ header {
 }
 
 .sobre-mim-direita p{
-    font-size: 20px;
+    font-size: 2rem;
     max-width: 500px;
     line-height: 30px;
 }
 
 .titulo h1{
-    font-size: 45px;
+    font-size: 4.5rem;
     margin: 20px 0px;
 }
 
@@ -231,7 +246,7 @@ header {
     text-decoration: none;
     color: var(--second);
     margin-top: 30px;
-    font-size: 20px;
+    font-size: 2rem;
 }
 
 #conhecimentos {
@@ -288,11 +303,11 @@ header {
 
 .conhecimentos .card h2{
     margin: 30px 0px;
-    font: 20px;
+    font-size: 2.4rem;
 }
 
 .conhecimentos .card p{
-    font-size: 16px;
+    font-size: 1.8rem;
     line-height: 25px;
 }
 
@@ -337,7 +352,7 @@ header {
 }
 
 .projeto-card-desc-direita p{
-    font-size: 15px;
+    font-size: 1.5rem;
 }
 
 .projeto-card-desc-esquerda {
@@ -358,3 +373,104 @@ header {
     margin-top: 20px;
 }
 
+
+
+@media (max-width: 1440px) { 
+    .container {
+        padding: 0px 100px;
+    }
+}
+
+@media (max-width: 1112px) {
+    html {
+        font-size: 8px;
+    }
+
+    .banner-direita img {
+        width: 90%;
+    }
+
+    .banner-direita {
+        width: 90%;
+        justify-content: end;
+    }
+
+    nav ul {
+        flex-direction: column;
+        display: none;
+        position: absolute;
+        left: 0;
+        width: 100%;
+        background-color: var(--bg-primary);
+        margin-bottom: 20px;
+    }
+
+    header {
+        height: auto;
+    }
+
+    header .container {
+        flex-direction: row;
+    }
+
+    .menu_mobile {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .menu ul li {
+        display: flex;
+        padding: 10px;
+        text-transform: uppercase;
+
+        margin-left: 20px;
+    }
+
+    .menu nav ul li a{
+        font-size: 2rem;
+    }
+
+    .menu ul li:hover {
+        background-color: var(--terciary);
+    }
+
+    .menu i:hover {
+        font-size: 3.5rem;
+        color: var(--second);
+    
+    }
+    
+    .menu ul li a:hover {
+        color: var(--second);
+    }
+
+
+}
+
+@media (max-width: 834px) {
+    .banner-direita{
+        display: none;
+    }
+    .banner-esquerda {
+        text-align: center;
+    }
+
+    .sobre-mim {
+        flex-direction: column;
+    }
+
+    .sobre-mim-direita {
+        margin-top: 90px;
+        text-align: center;
+    }
+
+    .sobre-mim-direita p {
+        max-width: 1000px;
+    }
+
+    .conhecimentos-cards {
+        flex-direction: column;
+    }
+
+}
