--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,6 +312,9 @@ header {
     line-height: 25px;
 }
 
+/* Section Projetos */
+
+
 #projetos {
     display: flex;
     justify-content: center;
@@ -320,6 +323,11 @@ header {
 #projetos .titulo {
     text-align: center;
 }
+
+#projetos .container {
+    padding: 0px 200px;
+}
+
 
 .projetos {
     margin: 30px;
@@ -353,7 +361,7 @@ header {
 }
 
 .projeto-card-desc-direita p{
-    font-size: 1.5rem;
+    font-size: 1.9rem;
 }
 
 .projeto-card-desc-esquerda {
@@ -366,15 +374,29 @@ header {
 }
 
 .projeto-card-desc-categoria {
-    padding: 10px 20px;
+    padding: 5px 15px;
     border: 2px solid var(--second);
     border-radius: 10px;
     text-align: center;
     margin-right: 20px;
     margin-top: 20px;
+    font-size: 1.5rem;
 }
 
+.projeto-card-desc-categoria.html {
+    border: 2px solid var(--html-color);    
+    background-color: rgba(255, 111, 0, 0.25);
+}
 
+.projeto-card-desc-categoria.css {
+    border: 2px solid var(--css-color);    
+    background-color: rgba(3, 155, 229,0.25);
+}
+
+.projeto-card-desc-categoria.javascript {
+    border: 2px solid var(--js-color);    
+    background-color: rgba(255, 214, 0,0.25);
+}
 
 
 
@@ -387,6 +409,8 @@ header {
     .container {
         padding: 0px 100px;
     }
+
+   
 }
 
 @media (max-width: 1112px) {
@@ -415,7 +439,7 @@ header {
         margin-bottom: 20px;
         height: auto;
     }
-    
+
     .menu ul li {
         display: flex;
         padding: 10px;
@@ -462,6 +486,15 @@ header {
 }
 
 @media (max-width: 834px) {
+    
+    .container {
+        padding: 0px 0px;
+    }
+
+    #projetos .container {
+        padding: 0px 0px;
+    }
+
     .banner-direita{
         display: none;
     }
@@ -486,6 +519,14 @@ header {
         flex-direction: column;
     }
 
+    .projeto-card-desc {
+        display: block;
+    }
+
+    .projeto-card-desc p{
+        margin-top: 30px;
+    }
+
 }
 
 @media (max-width: 414px) {
@@ -497,4 +538,13 @@ header {
     .container {
         padding: 0px 0px;
     }
+
+    .projeto-card-desc {
+        display: block;
+    }
+
+    .projeto-card-desc p{
+        margin-top: 30px;
+    }
+
 }
