--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@
     --css-color: #039BE5;
     --js-color: #FFD600;
     --flutter-color: #40C4FF;
+    --node-color: #88C043;
 
 }
 
@@ -441,6 +442,11 @@ header {
 .projeto-card-desc-categoria.flutter {
     border: 2px solid var(--flutter-color);    
     background-color: rgba(64, 196, 255, 0.25);
+}
+
+.projeto-card-desc-categoria.node {
+    border: 2px solid var(--node-color);    
+    background-color: rgba(136, 192, 67, 0.25);
 }
 
 
